--- a/serverup/templates/userland/own_profile_show.html
+++ b/serverup/templates/userland/own_profile_show.html
@@ -25,6 +25,9 @@
 <div id="profile">
 	<ul class="list-group list-group-unbordered">
 		<li class="list-group-item">
+			<b>UUID</b> <div>{{ user.profile.uuid }}</div>
+		</li>
+		<li class="list-group-item">
 			<b>First name</b> <div>{{ user.first_name }}</div>
 		</li>
 		<li class="list-group-item">
